# DBStudioX

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml
.stitch/: config.json
.storybook/: main.ts  preview.ts
docs/: GITHUB_SETUP.md  SETUP_COMPLETE.md  WIKI_ACTIVATION_GUIDE.md
docs/wiki-pages/: Action-참고-sqlite3.md  CI-CD.md  Home.md  gitignore-규칙.md  빌드-및-배포.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database.rs  file.rs  migration.rs  mod.rs  partition.rs  query.rs  schema.rs  schema_management.rs  stats.rs  transaction.rs  udf.rs
src-tauri/src/events/: data_change.rs  mod.rs  performance.rs
src-tauri/src/sqlite3x/: errors.rs  ffi.rs  mod.rs  types.rs  wrapper.rs
src-tauri/src/sqlite3x/partition/: index_strategy.rs  manager.rs  metadata.rs  mod.rs  sql_parser.rs  tests.rs
src-tauri/src/state/: app_state.rs  connection_pool.rs  mod.rs
src-tauri/src/utils/: error.rs  mod.rs  schema_diff.rs  serialization.rs
src/app/: layout.tsx  page.module.css  page.tsx
src/hooks/: index.ts  useDatabase.ts  useEvents.ts  useFileDialog.ts  useQuery.ts  useStats.ts
src/i18n/: config.ts
src/lib/: tauri.ts
src/schemas/: database.ts  query.ts
src/services/: apiService.ts  dbService.ts  fileService.ts
src/stores/: databaseStore.ts  historyStore.ts  index.ts  performanceStore.ts  queryStore.ts  recentStore.ts  uiStore.ts
src/styles/: fonts.css  globals.css
(+97 files in other folders)
