[package]
name = "dbstudiox"
version = "0.0.1"
description = "A modern database management tool powered by sqlite3x"
authors = ["ByteLogicCore"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dbstudiox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "functions", "hooks", "backup"] }
lru = "0.12"
csv = "1.3"
dirs = "5"
libloading = "0.8.9"

# sqlite3x integration (adjust path as needed)
# sqlite3x = { path = "../../sqlite3x" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
